--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ p {
   text-transform: capitalize;
   align-items: center;
   margin-left: 10px;
+  flex-wrap: wrap;
 }
 
 .breadcrumbs a,
